--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
+body{
+  padding: 0;
+  margin: 0;
+}
+
+nav{
+    background: gray;
+
+    text-align: center;
+}
+
+nav a{
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    padding: 15px;
+    margin: 10px;
+    display: inline-block;
+    text-decoration: none;
+}
+nav a:hover{
+    text-decoration: underline;
+}
 main{
     margin: 20px auto  20px   auto;
             top  right bottom left
