--- a/styles.css
+++ b/styles.css
@@ -23,21 +23,25 @@ nav a:hover{
     text-decoration: underline;
 }
 main{
-    margin: 20px auto  20px   auto;
-            top  right bottom left
-
-    margin-top: 20px;
-    margin-right: auto;
-    margin-bottom: 20px;
-    margin-left: auto;
+    margin: 20px auto;
+    display: flex;
+    flex: wrap;
 }
 
+.flexItem{
+    flex-basis: 300px;
+    flex-grow: 2;
+    margin: 2px;
+    background: yellow;
+    padding: 30px;
+
+}
 
 img{
     width: 100%;
     display: block;
     margin: 1% auto;
-    border:2px solid black;
+    border: 0;
 }
 
 @media screen and (min-width: 700px) {
@@ -58,15 +62,19 @@ img{
 
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 700px) {
         img{
-            width:10%;
+            width:30%;
             display: inline;
         }
-        .vertical{
+
+
+
+
+      }
+@media screen and (min-width: 1300px) {
+
+      img{
+          display: none;
           width: 30%;
-        }
-
-
-
       }
