--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,20 @@ body{
 
 .hero h2{
   position: absolute;
-  bottom: 10%;
+  bottom: 20%;
   right: 5%;
+}
+
+button{
+      position: absolute;
+      bottom: 10%;
+      right: 5%;
+      background: none;
+      padding: 5px;
+      border: 2px black solid;
+      color: black;
+      font-size: 1.3em;
+      border-radius: 5px;
 }
 
 nav{
@@ -61,7 +73,7 @@ main{
     flex-basis: 300px;
     flex-grow: 2;
     margin: 2px;
-    background: yellow;
+    background: rgba(181, 181, 181, 0.5);
     padding: 30px;
 
 }
